--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vim/bundle/arduino-syntax"]
 	path = vim/bundle/arduino-syntax
 	url = https://github.com/sudar/vim-arduino-syntax.git
+[submodule "vim/bundle/command-t"]
+	path = vim/bundle/command-t
+	url = git://git.wincent.com/command-t.git
