--- a/tmux.conf
+++ b/tmux.conf
@@ -119,3 +119,4 @@ set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M\
 set -g status-left ' #[fg=green,bold]#H#[default]'
 set -g status-right '#[fg=yellow,bold]#(cut -d " " -f 1-4 /proc/loadavg)#[default] #[fg=cyan,bold]%Y-%m-%d %H:%M:%S#[default] '
 
+set-option -g default-command "reattach-to-user-namespace -l bash"
