--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,14 @@
 ###########################
 
 # use 256 term for pretty colors
-# set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
+
+# mouse scrlling
+setw -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+set-option -g mouse-utf8 on
 
 # increase scroll-back history
 set -g history-limit 5000
@@ -12,7 +19,7 @@ set -g history-limit 5000
 setw -g mode-keys vi
 
 # disable mouse
-setw -g mode-mouse off
+# setw -g mode-mouse off
 
 # decrease command delay (increases vim responsiveness)
 set -sg escape-time 1
@@ -37,6 +44,7 @@ set -g visual-activity on
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/blob/master/README.md
 # set-option -g default-command "reattach-to-user-namespace -l zsh"
 
+set-option -g default-command "reattach-to-user-namespace -l bash"
 # ###########################
 # #  Key Bindings
 # ###########################
@@ -101,22 +109,66 @@ set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M\
  ###########################
  # Colors
  ###########################
- 
- # color status bar
- set -g status-bg colour235
- set -g status-fg white
- 
- # highlight current window
- set-window-option -g window-status-current-fg black
- set-window-option -g window-status-current-bg green
- 
- # set color of active pane
- set -g pane-border-fg colour235
- set -g pane-border-bg black
- set -g pane-active-border-fg green
- # set -g pane-active-border-bg black"'"'
+### COLOUR (Solarized 256)
 
-set -g status-left ' #[fg=green,bold]#H#[default]'
-set -g status-right '#[fg=yellow,bold]#(cut -d " " -f 1-4 /proc/loadavg)#[default] #[fg=cyan,bold]%Y-%m-%d %H:%M:%S#[default] '
+# default statusbar colors
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
 
-set-option -g default-command "reattach-to-user-namespace -l bash"
+# default window title colors
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
+
+
+#####
+# Others
+#
+#
+
+set-option -g status on
+set-option -g status-interval 5
+set-option -g status-utf8 on
+set-option -g status-justify "centre"
+set-option -g status-left-length 60
+set-option -g status-right-length 60
+
+set-option -g mode-fg black;
+set-option -g mode-bg white;
+set-option -g message-fg black;
+set-option -g message-bg white;
+set-option -g status-fg white;
+set-option -g status-bg black;
+set-option -g window-status-current-fg colour15;
+set-option -g window-status-current-bg colour240;
+set-option -g window-status-current-attr bold;
+set-option -g window-status-fg white;
+set-option -g mouse-utf8 off
+set-option -g window-status-bg black;
+set -g pane-active-border-fg cyan
+set -g pane-active-border-bg black
+
+
+
