--- a/tmux.conf
+++ b/tmux.conf
@@ -40,11 +40,6 @@ set -g visual-activity on
 # re-number windows when one is closed
 # set -g renumber-windows on
 
-# enable pbcopy and pbpaste
-# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/blob/master/README.md
-# set-option -g default-command "reattach-to-user-namespace -l zsh"
-
-set-option -g default-command "reattach-to-user-namespace -l bash"
 # ###########################
 # #  Key Bindings
 # ###########################
@@ -171,4 +166,4 @@ set -g pane-active-border-fg cyan
 set -g pane-active-border-bg black
 
 
-
+if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l bash"'
