--- a/tmux.conf
+++ b/tmux.conf
@@ -123,7 +123,7 @@ set-window-option -g window-status-current-bg default
 
 # pane border
 set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-active-border-fg yellow #base01
 
 # message text
 set-option -g message-bg colour235 #base02
@@ -162,8 +162,8 @@ set-option -g window-status-current-attr bold;
 set-option -g window-status-fg white;
 set-option -g mouse-utf8 off
 set-option -g window-status-bg black;
-set -g pane-active-border-fg cyan
-set -g pane-active-border-bg black
+# set -g pane-active-border-fg cyan
+# set -g pane-active-border-bg black
 
 
 if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l bash"'
